# CMF-Infinity

./: .gitattributes  .gitignore  HANDOFF.md  README.md  chat_120m.bat  checkpoint_latest.pt  deploy_cmf.py  infinity.bat  kaggle_agi_pipeline.py  pyproject.toml  run_cmf_chat.bat  setup.py  start_pretraining.bat  start_training.bat  test_checkpoint.py  test_checkpoint_fixed.py  train_rtx4050_100m.bat  train_rtx4050_100m_mb8_resume.bat  train_rtx4050_chinchilla.bat  train_rtx4050_resume_v2.bat
cmf/: __init__.py  advanced.py  baselines.py  benchmarks.py  checkpointing.py  config.py  data.py  experiments.py  fast_integrator.py  generation.py  infinity_runtime.py  model.py  model_v2.py  power.py  presets.py  runtime.py  scalable_data.py  solver.py  tokenizer.py  training.py
colab/: train_2b_colab.py  train_500m_colab.py
cpp/: cmf_cuda_kernel.cu  cmf_extension.cpp
docs/: architecture.md  cmf_120m_pretraining_and_sft_guide.md  cmf_infinity_architecture.md  cmf_masterclass_textbook.md  current_claims.md  experiment_plan.md  phase_protocol.md  results_summary.md
kaggle/: README.md  infer_cmf_120m.py  requirements.txt  train_120m_kaggle.py  train_2b_kaggle.py  train_500m_kaggle.py  train_cmf_120m.py
paper/: continuous_meaning_field.md  references.bib
scratch/: adversarial_evaluation.py  average_scaling.py  capacity_and_entropy_showdown.py  compare_keys.py  debug_seq.py  deep_ablation_tests.py  diagnose_stabilizers.py  diagnose_v2_gradients.py  honest_eval.py  inspect_both.py  inspect_checkpoint.py  inspect_cmf.py  inspect_gpt.py  inspect_model_type.py  inspect_pdf.py  (+23 more)
(+56 files in other folders)
